services/argocd/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - cd.placeholder
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 443
          weight: 1
